# nixln-edit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: build.yml
src/: CMakeLists.txt  VERSION.h  args.c  args.h  main.c  sig_handler.c  sig_handler.h  utils.c  utils.h
